--- a/css/layout.css
+++ b/css/layout.css
@@ -531,6 +531,7 @@ section .content {
     position: relative;
     display: inline-block;
 }
+.portfolio .img-area .pet-promotion-slide,
 .portfolio .img-area .promotion-slide{
     width: 554px;
 }
